--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
 <link rel="stylesheet" href="default.css"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <html>
   <head>
     <title>Random Quote Machine</title>
     <script src="jquery-3.2.1.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <script src="https://use.fontawesome.com/2d855ccd2c.js"></script>
   </head>
   <body>
     <div class="container-fluid">
